[gd_scene load_steps=7 format=3 uid="uid://dqrfrb8e5g4kh"]

[ext_resource type="Script" uid="uid://dpva2xqakkksn" path="res://scenes/bosses/warlord_turtle/rocket.gd" id="1_nlqde"]
[ext_resource type="Texture2D" uid="uid://bphwqxm8r2dup" path="res://assets/sprites/war_lord_bullet/bullet_rocket.png" id="2_8m0yp"]
[ext_resource type="Script" uid="uid://8dts8kr8c5wk" path="res://scenes/bosses/king_crab/hit_area_2d.gd" id="3_8ewrw"]
[ext_resource type="PackedScene" uid="uid://ci66febm8eq4h" path="res://scenes/bosses/warlord_turtle/explosion_particle.tscn" id="4_fjb2r"]
[ext_resource type="Script" uid="uid://dva73oliuh5wk" path="res://scripts/node2d_factory.gd" id="4_gyq8u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxana"]
radius = 6.0
height = 24.0

[node name="Rocket" type="RigidBody2D"]
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_nlqde")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_8m0yp")
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xxana")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("3_8ewrw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
shape = SubResource("CapsuleShape2D_xxana")

[node name="ParticlesFactory" type="Marker2D" parent="."]
script = ExtResource("4_gyq8u")
product_packed_scene = ExtResource("4_fjb2r")
target_container_name = &"Bullets"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="HitArea2D" to="." method="_on_hit_area_2d_body_entered"]
[connection signal="hitted" from="HitArea2D" to="." method="_on_hit_area_2d_hitted"]
